--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 #   git config --global core.excludesfile ~/.gitignore_global
 
 # Ignore bundler config
-config/locales/database1.yml
+config/database.yml
 /.bundle
 
 # Ignore the default SQLite database.
